# rks-amdgpu

./: .gitignore  CMakeLists.txt
src/: argparse.c  data_struct.c  data_struct.h  main.c  power_dpm_performance.c  pp_power_profile_mode.c  public.h  read_config.c  signal.c  sys_pwm.c  utils.h
test/: amdgpu-config
